--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-!pip install opencv-python
-!pip install numpy
-!pip install uuid
-!pip install qrcode
+pip install opencv-python
+pip install numpy
+pip install uuid
+pip install qrcode
